--- a/index.html
+++ b/index.html
@@ -5,8 +5,33 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Eflex TodoList</title>
+    <link rel="stylesheet" href="./css/style.css">
+    <script src="https://kit.fontawesome.com/749225044f.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Chicle&family=Poppins:wght@300;400;500;600;700;800;900&family=Roboto:ital,wght@0,400;0,500;0,700;0,900;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <div class="MainContainer">
+        <div class="TodoContainer">
+            <div class="TodoTitle">
+                <i class="fa fa-book" aria-hidden="true"></i>
+                <h1>Eflex TodoList</h1>
+            </div>
+
+            <div class="TodoInput">
+                <input type="text" placeholder="What needs to be done?" id="TodoInput">
+                <button id="AddTodo"><i class="fa fa-plus" aria-hidden="true"></i></button>
+            </div>
+
+                <div class="DeleAllCheck"><button class="btn"><i id="del" class="fa fa-trash" aria-hidden="true"></i> Delete All Check</button></div>
+
+            <div class="TodoOutput">
+            </div>
+        </div>
+    </div>
+
+
+    <script src="./js/App.js"></script>
 </body>
 </html>
