--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Eflex TodoList</title>
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/mobile.css">
     <script src="https://kit.fontawesome.com/749225044f.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -24,7 +25,7 @@
                 <button id="AddTodo"><i class="fa fa-plus" aria-hidden="true"></i></button>
             </div>
 
-                <div class="DeleAllCheck"><button class="btn"><i id="del" class="fa fa-trash" aria-hidden="true"></i> Delete All Check</button></div>
+                <div class="DeleAllCheck"><button class="btn"><i id="del" class="fa fa-times" aria-hidden="true"></i> Delete All Check</button></div>
 
             <div class="TodoOutput">
             </div>
